# duckstring

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
experiment/: lake.py  order_daily.py  ponds.json
src/duckstring/: __init__.py  core.py  utils.py
tests/: test_core.py
